<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="30dp"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:text="@string/topup_preview_textView1"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="10dp"
        android:text="@string/topup_preview_textView2"
        android:textSize="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="10dp"
        android:text="@string/topup_preview_textView3"
        android:textSize="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:text="@string/topup_preview_textView4" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="20dp"
        android:text="@string/topup_preview_textView5" />

    <TextView
        android:id="@+id/text_topup_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:text="@string/topup_preview_textView6"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="200dp"
        android:text="@string/topup_preview_textView7" />

    <TextView
        android:id="@+id/text_transnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:text="@string/topup_preview_textView8"
        android:textSize="18dp" />

    <ImageView
        android:id="@+id/image_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="10dp" />

    <!--<Button-->
        <!--android:id="@+id/button_print"-->
        <!--android:layout_width="130dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="200dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:background="#b8c3f2"-->
        <!--android:text="@string/topup_preview_button_print"-->
        <!--android:textColor="#ffffff" />-->

</LinearLayout>
