<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#0081CA"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp">

        <Button
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back"
            android:onClick="back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text=" Create Acc"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:fillViewport="true"
        android:padding="10dp">

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:background="@drawable/myroundlayout"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/edit_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"
                android:hint="@string/create_account_edit_firstname"
                android:inputType="textPersonName"
                android:maxLength="15"
                android:padding="7dp"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/edit_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"
                android:hint="@string/create_account_edit_lastname"
                android:inputType="textPersonName"
                android:maxLength="15"
                android:padding="7dp"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/edit_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"
                android:hint="@string/create_account_edit_phonenumber"
                android:inputType="phone"
                android:maxLength="20"
                android:padding="7dp"
                android:textSize="15dp" />


            <EditText
                android:id="@+id/edit_deposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"
                android:hint="@string/create_account_edit_deposit"
                android:inputType="number"
                android:maxLength="8"
                android:padding="7dp"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btnSelectPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/myround"
                android:text="Select Photo"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/viewImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="3" />

            <Button
                android:id="@+id/button_read_fingerprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/myround"
                android:text="@string/read_fingerprint_button_read"
                android:textColor="#ffffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_register_msr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/myround"
                android:text="@string/register_msr_card_button_read"
                android:textColor="#ffffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/msrResultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_register_iccard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/myround"
                android:text="@string/register_ic_card_button_read"
                android:textColor="#ffffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/iccardResultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/read_ICCard_default_text"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/myround"
                android:text="@string/create_account_button_create"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
