<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp"
        android:background="#0081CA" >
        <Button
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:onClick="back"
            android:background="@drawable/back"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text=" Create Acc"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/myroundlayout"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp">


    <EditText
        android:id="@+id/edit_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginBottom="10dp"
        android:padding="7dp"
        android:textSize="15dp"
    	android:maxLength="15"
    	android:hint="@string/create_account_edit_firstname"
    	android:inputType="textPersonName" />
    
    <EditText
        android:id="@+id/edit_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginBottom="10dp"
        android:padding="7dp"
        android:textSize="15dp"
    	android:maxLength="15"
    	android:hint="@string/create_account_edit_lastname"
    	android:inputType="textPersonName" />
    
    <EditText
        android:id="@+id/edit_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginBottom="10dp"
        android:padding="7dp"
        android:textSize="15dp"
    	android:hint="@string/create_account_edit_phonenumber"
        android:phoneNumber="true" />
    
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginBottom="10dp"
        android:padding="7dp"
    	android:textSize="16dp"
    	android:maxLength="8"
    	android:hint="@string/create_account_edit_password" />
    

    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/myround"
        android:textColor="#ffffff"
        android:text="Verify" />
</LinearLayout>
</RelativeLayout>
